# ITMO-Sem1-Algorithms

lab1/: CMakeLists.txt  game.cpp  game.h  main.cpp
lab2/: Array.h  CMakeLists.txt  main.cpp  test_array.cpp
lab3/: CMakeLists.txt  compare.py  findThreshold.cpp  quicksort.h  test_sort.cpp
lab4/: CMakeLists.txt  dice.h  main.cpp  stat.cpp  stat_visualisation.ipynb
lab4/stat/: 10d10.csv  10d100.csv  1d10.csv  1d6.csv  2d10.csv  2d6.csv  3d10.csv  3d6.csv
